[package]
name = "fq_scheme_parser"
version = "0.1.0"
edition = "2021"
description = "A simple URI scheme parser for ssr, vmess and etc. "
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1.4.0"
base64 = "0.13.0"
urlencoding = "2.1.0"
serde_json = "1.0.81"
serde = { version = "1.0.136", features = ["derive"]}
reqwest = "0.11.10"
tokio = { version = "1.18.2", features = ["full"] }

[[bin]]
name = "sub"
path = "src/subscribe.rs"